# evoxel

./: Cargo.toml
crates/evoxel/: Cargo.toml
crates/evoxel-cli/: Cargo.toml
crates/evoxel-cli/src/: cli.rs  error.rs  main.rs
crates/evoxel-cli/src/commands/: test.rs
crates/evoxel-core/: Cargo.toml
crates/evoxel-core/src/: data_frame_utils.rs  lib.rs  voxel_grid.rs
crates/evoxel-io/: Cargo.toml
crates/evoxel-io/src/: read.rs
crates/evoxel-transform/: Cargo.toml
crates/evoxel-transform/src/: filter.rs  translate.rs
crates/evoxel/src/: lib.rs
